@@ -7,55 +7,95 @@ import com.example.continent.application.domain.repository.CountryRepository;
 import com.example.continent.application.domain.service.CountryService;
 import com.example.continent.application.dto.CountryDto;
 import com.example.continent.application.dto.LanguageDto;
+import com.example.continent.application.exception.DuplicateResourceException;
 import com.example.continent.application.exception.ResourceNotFoundException;
 import com.example.continent.application.mapper.CountryMapper;
-
 import com.example.continent.application.mapper.LanguageMapper;
 import lombok.RequiredArgsConstructor;
+import org.springframework.context.MessageSource;
+import org.springframework.context.i18n.LocaleContextHolder;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class CountryServiceImpl implements CountryService {
 
     private final CountryRepository countryRepository;
     private final ContinentRepository continentRepository;
     private final CountryMapper countryMapper;
     private final LanguageMapper languageMapper;
+    private final MessageSource messageSource;
 
     @Override
     @Transactional(readOnly = true)
-    public List<LanguageDto> getLanguagesByCountry(Long countryId) {
-        Country country = countryRepository.findById(countryId)
-                .orElseThrow(() -> new ResourceNotFoundException("Country with id " + countryId + " not found"));
+    public Page<LanguageDto> getLanguagesByCountry(Long countryId, Pageable pageable) {
+        Country country = countryRepository.findByIdAndDeletedFalse(countryId)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        messageSource.getMessage("error.country.notfound",
+                                new Object[]{countryId}, LocaleContextHolder.getLocale())
+                ));
 
         return country.getLanguages()
                 .stream()
+                .filter(lang -> !Boolean.TRUE.equals(lang.getDeleted())) // chỉ lấy language chưa xóa
                 .map(languageMapper::toDto)
-                .toList();
+                .collect(java.util.stream.Collectors.collectingAndThen(
+                        java.util.stream.Collectors.toList(),
+                        list -> new org.springframework.data.domain.PageImpl<>(list, pageable, list.size())
+                ));
     }
 
     @Override
     public CountryDto create(CountryDto dto) {
-        Continent continent = continentRepository.findById(dto.getContinentId())
-                .orElseThrow(() -> new ResourceNotFoundException("Continent with id " + dto.getContinentId() + " not found"));
+        // Check duplicate code
+        countryRepository.findByCodeAndDeletedFalse(dto.getCode())
+                .ifPresent(existing -> {
+                    throw new DuplicateResourceException(
+                            messageSource.getMessage("error.country.exists",
+                                    new Object[]{dto.getCode()}, LocaleContextHolder.getLocale())
+                    );
+                });
+
+        Continent continent = continentRepository.findByIdAndDeletedFalse(dto.getContinentId())
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        messageSource.getMessage("error.continent.notfound",
+                                new Object[]{dto.getContinentId()}, LocaleContextHolder.getLocale())
+                ));
 
         Country country = countryMapper.toEntity(dto);
         country.setContinent(continent);
+        country.setDeleted(false);
+
         return countryMapper.toDto(countryRepository.save(country));
     }
 
     @Override
     public CountryDto update(Long id, CountryDto dto) {
-        Country country = countryRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Country with id " + id + " not found"));
+        Country country = countryRepository.findByIdAndDeletedFalse(id)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        messageSource.getMessage("error.country.notfound",
+                                new Object[]{id}, LocaleContextHolder.getLocale())
+                ));
 
-        Continent continent = continentRepository.findById(dto.getContinentId())
-                .orElseThrow(() -> new ResourceNotFoundException("Continent with id " + dto.getContinentId() + " not found"));
+        // Check duplicate code (exclude itself)
+        countryRepository.findByCodeAndDeletedFalse(dto.getCode())
+                .filter(c -> !c.getId().equals(id))
+                .ifPresent(c -> {
+                    throw new DuplicateResourceException(
+                            messageSource.getMessage("error.country.exists",
+                                    new Object[]{dto.getCode()}, LocaleContextHolder.getLocale())
+                    );
+                });
+
+        Continent continent = continentRepository.findByIdAndDeletedFalse(dto.getContinentId())
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        messageSource.getMessage("error.continent.notfound",
+                                new Object[]{dto.getContinentId()}, LocaleContextHolder.getLocale())
+                ));
 
         country.setCode(dto.getCode());
         country.setName(dto.getName());
@@ -66,24 +106,32 @@ public class CountryServiceImpl implements CountryService {
 
     @Override
     public void delete(Long id) {
-        if (!countryRepository.existsById(id)) {
-            throw new ResourceNotFoundException("Country with id " + id + " not found");
-        }
-        countryRepository.deleteById(id);
+        Country country = countryRepository.findByIdAndDeletedFalse(id)
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        messageSource.getMessage("error.country.notfound",
+                                new Object[]{id}, LocaleContextHolder.getLocale())
+                ));
+
+        // Xóa mềm
+        country.setDeleted(true);
+        countryRepository.save(country);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public CountryDto getById(Long id) {
-        return countryRepository.findById(id)
+        return countryRepository.findByIdAndDeletedFalse(id)
                 .map(countryMapper::toDto)
-                .orElseThrow(() -> new ResourceNotFoundException("Country with id " + id + " not found"));
+                .orElseThrow(() -> new ResourceNotFoundException(
+                        messageSource.getMessage("error.country.notfound",
+                                new Object[]{id}, LocaleContextHolder.getLocale())
+                ));
     }
 
     @Override
-    public List<CountryDto> getAll() {
-        return countryRepository.findAll()
-                .stream()
-                .map(countryMapper::toDto)
-                .collect(Collectors.toList());
+    @Transactional(readOnly = true)
+    public Page<CountryDto> getAll(Pageable pageable) {
+        return countryRepository.findAllByDeletedFalse(pageable)
+                .map(countryMapper::toDto);
     }
 }
